--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Vendas</h1>
+    <p> Vendas = 5000</p>
     <a href="index.html"> Voltar a página Home</a>
 </body>
 </html>
